fix: adjust z-index for header and add video placeholder with iframe

--- a/styles.scss
+++ b/styles.scss
@@ -244,7 +244,7 @@ header {
     position: absolute;
     top: 18%;
     right: -37%;
-    z-index: 1;
+    z-index: -1;
   }
 
   .section-content {
